--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SN_INSTANCE_URL=https://dev303448.service-now.com
-SN_USERNAME=Integration User
-SN_PASSWORD=Password@123
+SN_USERNAME=admin
+SN_PASSWORD=n/$zULuUC37l
 SN_TABLE=u_resume_ranking
